index.html: implemented hamburger menu for navbar on small screens. Will implement for other pages if no issues after testing

--- a/assets/style.css
+++ b/assets/style.css
@@ -121,3 +121,7 @@ body {
 #upass {
     width: 170%;
 }
+
+.navbar-toggler {
+    opacity: 100%;
+}
